<resources>
    <string name="app_name">Game Description</string>
    <string name="txt_Email">E-mail</string>
    <string name="txt_Password">Password</string>
    <string name="txt_Remeber">Remember</string>
    <string name="txt_Register">Create account</string>
    <string name="txt_Login">Login</string>
    <string name="txt_Email_Format">email@email.com</string>
    <string name="txt_Name">Name</string>
    <string name="txt_Password_Repeat">Repeate Password</string>
    <string name="txt_Search">Search Game</string>
    <string name="txt_created_at">Created at</string>
    <string name="txt_description">Description</string>
    <string name="txt_Save">Save Game</string>
</resources>